--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Пупок</title>
+    <title>Index</title>
 </head>
 <body>
 <a href="{% url 'blog:index' %}">Ссылка
