--- a/blogicum/templates/base.html
+++ b/blogicum/templates/base.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-</body>
+<html lang="ru">
+  <head>
+  </head>
+  <body>
+    {% include "includes/header.html" %}
+    <main>
+      {% block content %}
+      {% endblock %}
+    </main>
+    {% include "includes/footer.html" %}
+  </body>
 </html>
