--- a/blogicum/templates/includes/header.html
+++ b/blogicum/templates/includes/header.html
@@ -1,10 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<header>
+        {% with request.resolver_match.view_name as view_name %}
+        <ul class="nav nav-pills">
+          <li class="nav-item">
+            <a
+              class="nav-link {% if view_name == 'blog:index' %} active {% endif %}"
+              href="{% url 'blog:index' %}"
+              >
+              Лента записей
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link {% if view_name == 'pages:about' %} active {% endif %}"
+              href="{% url 'pages:about' %}"
+              >
+              О проекте
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link {% if view_name == 'pages:rules' %} active {% endif %}"
+              href="{% url 'pages:rules' %}"
+            >
+              Наши правила
+            </a>
+          </li>
+        </ul>
+        {% endwith %}
+    </header>
