--- a/blogicum/templates/pages/about.html
+++ b/blogicum/templates/pages/about.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>About</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
 
-<a href="{% url 'pages:about' %}">
-</a>
+{% block content %}
+<h1>О проекте</h1>
+
+<p>Блогикум — это дом для творческих людей. Это — сообщество людей, для которых нет грани между ведением блога и дружбой в социальных сетях.
+</p>
+<p>Дружба и рассказы о новых, неизведанных впечатлениях — вот что вы найдете на нашем ресурсе. Миллионы блогов по различным темам. Путешествия, политики, развлечения, мода, мода, литература, дизайн и все другие сферы человеческой деятельности.
+</p>
+<p>Творчество, разнообразие и свобода взглядов и самовыражения — основные черты наших пользователей.
+</p>
+{% endblock %}
