--- a/blogicum/templates/pages/rules.html
+++ b/blogicum/templates/pages/rules.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Rules</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
 
-<a href="{% url 'pages:rules' %}">
-</a>
+{% block content %}
+<h1>Наши правила</h1>
+
+<p><b>Cамовыражение.</b> У наших пользователей должна быть возможность создать что-то своё, выразить себя, свои мысли и чувства.
+</p>
+<p><b>Многообразие. .</b> Мы уважаем и приветствуем разные мнения и культуры. Блогикум — это место, объединяющее самых разных людей. Поделитесь своим уникальным взглядом на мир.
+</p>
+<p><b>Творчество. .</b> Не важно, в какой области вы творите, это может быть литература, дизайн, программирование. Наши инструменты помогут вам раскрыть талант максимально просто и комфортно.
+</p>
+<p><b>Личность.</b> Мы сохраним ваши сокровенные мысли в тайне. Делитесь своей информацией только с теми, кого выбрали. Как и насколько засекречивать вашу личную информацию — определяете вы и только вы.
+</p>
+{% endblock %}
+
