--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Detail</title>
-</head>
-<body>
-
-</body>
-</html>
-
-<a href="{% url 'blog:post_detail' %}">
-</a>
+{% extends 'base.html' %}
+{% block content %}
+{% endblock %}
