--- a/blogicum/templates/blog/category.html
+++ b/blogicum/templates/blog/category.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Category</title>
-</head>
-<body>
-
-</body>
-</html>
-
-<a href="{% url 'blog:category_posts' %}">
-</a>
+{% extends 'base.html' %}
+{% block content %}
+{% endblock %}
