detail.html added

--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -1,15 +1,19 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>Лента записей</h1>
-{% for post in posts %}
-    <li>
-      <h3>{{ post.location }}</h3>
-      <p>{{ post.date }}</p>
-        <p>{{ post.category }}</p>
-        <p>{{ post.text }}</p>
-    </li>
-     {% if not forloop.last %}
+<hr>
+{% for post in posts reversed%}
+    <ul>
+      <li>Место: {{ post.location }}</li>
+      <li>Дата: {{ post.date }}</li>
+      <li>Категория: {{ post.category }}</li>
+    </ul>
+      <p>{{ post.text|truncatewords:10 }}</p>
+ <a class="mt-3 regular-link" href="{% url 'blog:post_detail' post.id %}">
+              Читать полный текст
+{% if not forloop.last %}
       <hr>
     {% endif %}
+    </a>
  {% endfor %}
 {% endblock %}
