--- a/blogicum/templates/includes/header.html
+++ b/blogicum/templates/includes/header.html
@@ -1,11 +1,12 @@
 {% load static %}
  <style>
-    .left {
+    .header {
       background: lightskyblue;
+      padding: 8px;
     }
   </style>
 <header>
-    <div class="left">
+    <div class="header">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <div class="row">
     <div class="col-md-4" ><img src="{% static 'img/logo.png' %}" height="30" alt=""></div>
