--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -1,3 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
+<ul>
+    <li>Место: {{ post.location }}</li>
+      <li>Дата: {{ post.date }}</li>
+      <li>Категория: {{ post.category }}</li>
+    </ul>
+      <p>{{ post.text }}</p>
 {% endblock %}
