--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -6,14 +6,11 @@
     <ul>
       <li>Место: {{ post.location }}</li>
       <li>Дата: {{ post.date }}</li>
-      <li>Категория: {{ post.category }}</li>
+      <li>Категория: <a class="mt-3 regular-link" href="{% url 'blog:category_posts' post.category %}"> {{ post.category }} </a></li>
     </ul>
       <p>{{ post.text|truncatewords:10 }}</p>
  <a class="mt-3 regular-link" href="{% url 'blog:post_detail' post.id %}">
-              Читать полный текст
-{% if not forloop.last %}
+              Читать полный текст </a>
       <hr>
-    {% endif %}
-    </a>
  {% endfor %}
 {% endblock %}
