some header changes

--- a/blogicum/templates/blog/category.html
+++ b/blogicum/templates/blog/category.html
@@ -1,4 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
+<style>
+  h1 {
+  margin-left: 120px;
+  margin-top: 50px;
+  margin-bottom: 50 px;
+  }
+</style>
 <h1>Публикации в категории - {{ slug }}</h1>
 {% endblock %}
