--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -1,5 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
+<style>
+  ul {
+  margin-left: 120px;
+  margin-top: 50px;
+  margin-right: 120px
+  }
+  p {
+  margin-left: 120px;
+  margin-right: 990px;
+  }
+</style>
 <ul>
     <li>Место: {{ post.location }}</li>
       <li>Дата: {{ post.date }}</li>
