--- a/blogicum/templates/pages/about.html
+++ b/blogicum/templates/pages/about.html
@@ -1,9 +1,18 @@
 {% extends 'base.html' %}
 
-
 {% block content %}
-<h1>О проекте</h1>
+<style>
+  p {
+  margin-left: 120px;
+  margin-right: 100px
+  }
+  h1 {
+  margin-left: 120px;
+  margin-top: 50px;
+  }
+</style>
 
+<h1>О проекте</h1>
 <p>Блогикум — это дом для творческих людей. Это — сообщество людей, для которых нет грани между ведением блога и дружбой в социальных сетях.
 </p>
 <p>Дружба и рассказы о новых, неизведанных впечатлениях — вот что вы найдете на нашем ресурсе. Миллионы блогов по различным темам. Путешествия, политики, развлечения, мода, мода, литература, дизайн и все другие сферы человеческой деятельности.
