--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -1,5 +1,19 @@
 {% extends 'base.html' %}
 {% block content %}
+<style>
+  ul {
+  margin-left: 120px;
+  }
+  p {
+  margin-left: 120px;
+  }
+  h1 {
+  margin-left: 120px;
+  margin-top: 50px;
+  a {
+  margin-right: 120px;
+  }
+</style>
 <h1>Лента записей</h1>
 <hr>
 {% for post in posts reversed%}
@@ -9,8 +23,10 @@
       <li>Категория: <a class="mt-3 regular-link" href="{% url 'blog:category_posts' post.category %}"> {{ post.category }} </a></li>
     </ul>
       <p>{{ post.text|truncatewords:10 }}</p>
- <a class="mt-3 regular-link" href="{% url 'blog:post_detail' post.id %}">
-              Читать полный текст </a>
+ <p><a class="mt-3 regular-link" href="{% url 'blog:post_detail' post.id %}">
+              Читать полный текст </a></p>
+{% if not forloop.last %}
       <hr>
+     {% endif %}
  {% endfor %}
 {% endblock %}
