--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -1,20 +1,21 @@
 {% extends 'base.html' %}
 {% block content %}
 <style>
-  ul {
+  .this_style {
   margin-left: 120px;
-  margin-top: 50px;
-  margin-right: 120px
+  margin-top: 120px
   }
-  p {
-  margin-left: 120px;
+  .text {
   margin-right: 990px;
   }
 </style>
+<div class="this_style">
 <ul>
+    <div class="right"></div>
     <li>Место: {{ post.location }}</li>
       <li>Дата: {{ post.date }}</li>
-      <li>Категория: {{ post.category }}</li>
+      <li>Категория: <a class="mt-3 regular-link" href="{% url 'blog:category_posts' post.category %}"> {{ post.category }} </a></li>
     </ul>
-      <p>{{ post.text }}</p>
+      <div class="text">{{ post.text }}</div>
+</div>
 {% endblock %}
