--- a/blogicum/templates/includes/header.html
+++ b/blogicum/templates/includes/header.html
@@ -1,20 +1,43 @@
 {% load static %}
 <style>
-.my_class {
-display: flex;
-  padding-left: 120px;
-  flex-flow: row nowrap;
-  background: lightskyblue;
+header {
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
+  display: flex;
+  position: fixed;
+  padding: 15px 20px;
+  align-items: center;
+  background-color: lightskyblue;
 }
-.blogicum {padding-left: 7px;
-font-size: 20px;
 
+.logo {
+font-size: 20px;
+  font-weight: bold;
+  align-items: center;
+  display: inline-flex;
+  padding-left: 100px;
+}
+.blogicum {
+font-size: 22px;
+background: lightskyblue;
+margin-left: 5px;
+}
+.menu {
+	list-style: none;
+	position: absolute;
+	top: 10px;
+	right: 100px;
+	lightskyblue;
 }
 </style>
+<header>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <div class="my_class"><img src="{% static 'img/logo.png' %}" height="30" alt="">
+<div class="logo"><img src="{% static 'img/logo.png' %}" height="30" alt=""></div>
     <div class="blogicum">Блогикум</div>
         {% with request.resolver_match.view_name as view_name %}
+        <nav class="menu">
     <ul class="nav nav-pills">
           <li class="nav-item">
             <a
@@ -41,5 +64,6 @@ font-size: 20px;
             </a>
           </li>
         </ul>
-        </div>
+        </nav>
+    </header>
         {% endwith %}
