--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -14,6 +14,7 @@
   margin-right: 120px;
   }
 </style>
+
 <h1>Лента записей</h1>
 <hr>
 {% for post in posts reversed%}
@@ -23,10 +24,9 @@
       <li>Категория: <a class="mt-3 regular-link" href="{% url 'blog:category_posts' post.category %}"> {{ post.category }} </a></li>
     </ul>
       <p>{{ post.text|truncatewords:10 }}</p>
- <p><a class="mt-3 regular-link" href="{% url 'blog:post_detail' post.id %}">
-              Читать полный текст </a></p>
+    <p><a class="mt-3 regular-link" href="{% url 'blog:post_detail' post.id %}">Читать полный текст </a></p>
 {% if not forloop.last %}
-      <hr>
-     {% endif %}
- {% endfor %}
-{% endblock %}
+    <hr>
+    {% endif %}
+   {% endfor %}
+  {% endblock %}
