--- a/blogicum/templates/pages/about.html
+++ b/blogicum/templates/pages/about.html
@@ -1,21 +1,35 @@
-{% extends 'base.html' %}
-{% block content %}
 <style>
-  p {
-  margin-left: 120px;
-  margin-right: 100px
-  }
-  h1 {
-  margin-left: 120px;
-  margin-top: 100px;
-  }
+#about {
+margin-top: 50px;
+}
 </style>
 
-<h1>О проекте</h1>
-<p>Блогикум — это дом для творческих людей. Это — сообщество людей, для которых нет грани между ведением блога и дружбой в социальных сетях.
-</p>
-<p>Дружба и рассказы о новых, неизведанных впечатлениях — вот что вы найдете на нашем ресурсе. Миллионы блогов по различным темам. Путешествия, политики, развлечения, мода, мода, литература, дизайн и все другие сферы человеческой деятельности.
-</p>
-<p>Творчество, разнообразие и свобода взглядов и самовыражения — основные черты наших пользователей.
-</p>
+{% extends 'base.html' %}
+<head>
+  <title>
+    {% block title %}О проекте{% endblock %}
+  </title>
+</head>
+{% block content %}
+<main>
+  <div id="about">
+      <div class="container py-5">
+        <h1>О проекте</h1>
+        <p>
+          Блогикум — это дом для творческих людей. Это — сообщество людей, для которых
+          нет грани между ведением блога и дружбой в социальных сетях.
+        </p>
+        <p>
+          Дружба и рассказы о новых, неизведанных впечатлениях — вот
+          что вы найдете на нашем ресурсе.  Миллионы блогов по различным темам.
+          Путешествия, политики, развлечения, мода, мода, литература, дизайн и все
+          другие сферы человеческой деятельности.
+        </p>
+        <p>
+          Творчество, разнообразие и свобода взглядов и самовыражения —
+          основные черты наших пользователей.
+        </p>
+      </div>
+    </div>
+  </main>
 {% endblock %}
