--- a/blogicum/templates/base.html
+++ b/blogicum/templates/base.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    {% include "includes/header.html" %}
-  </head>
+<head>
+  <title>
+    {% block title %}{% endblock %}
+  </title>
+</head>
   <body>
+    {% include "includes/header.html" %}
     <main>
       {% block content %}
       {% endblock %}
     </main>
     {% include "includes/footer.html" %}
   </body>
-</html>
