--- a/blogicum/templates/includes/header.html
+++ b/blogicum/templates/includes/header.html
@@ -34,38 +34,30 @@ margin-left: 5px;
 </style>
 
 <header>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-<div class="logo"><img src="{% static 'img/logo.png' %}" height="30" alt=""></div>
-    <div class="blogicum">Блогикум</div>
-        {% with request.resolver_match.view_name as view_name %}
-        <nav class="menu">
-    <ul class="nav nav-pills">
+  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <div class="logo"><img src="{% static 'img/logo.png' %}" height="30" alt=""></div>
+      <div class="blogicum">Блогикум</div>
+      {% with request.resolver_match.view_name as view_name %}
+      <nav class="menu">
+        <ul class="nav nav-pills">
           <li class="nav-item">
-            <a
-              class="nav-link {% if view_name == 'blog:index' %} active {% endif %}"
-              href="{% url 'blog:index' %}"
-              >
-              Лента записей
+            <a class="nav-link {% if view_name == 'blog:index' %}
+             active {% endif %}" href="{% url 'blog:index' %}">
+               Лента записей
             </a>
           </li>
           <li class="nav-item">
-            <a
-              class="nav-link {% if view_name == 'pages:about' %} active {% endif %}"
-              href="{% url 'pages:about' %}"
-              >
-              О проекте
-            </a>
+            <a class="nav-link {% if view_name == 'pages:about' %}
+            active {% endif %}" href="{% url 'pages:about' %}">
+              О проекте</a>
           </li>
           <li class="nav-item">
-            <a
-              class="nav-link {% if view_name == 'pages:rules' %} active {% endif %}"
-              href="{% url 'pages:rules' %}"
-            >
+            <a class="nav-link {% if view_name == 'pages:rules' %}
+            active {% endif %}" href="{% url 'pages:rules' %}">
               Наши правила
             </a>
           </li>
         </ul>
-        </nav>
-    {% endwith %}
-    </header>
-
+       </nav>
+      {% endwith %}
+</header>
