--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -15,13 +15,5 @@
   </title>
 </head>
 {% block content %}
-<div class="this_style">
-<ul>
-    <div class="right"></div>
-    <li>Место: {{ post.location }}</li>
-    <li>Дата: {{ post.date }}</li>
-    <li>Категория: <a class="mt-3 regular-link" href="{% url 'blog:category_posts' post.category %}"> {{ post.category }} </a></li>
-    </ul>
-    <div class="text">{{ post.text }}</div>
-</div>
+{% include "includes/post.html" %}
 {% endblock %}
