--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -22,16 +22,11 @@
 {% block content %}
 <h1>Лента записей</h1>
 <hr>
-{% for post in posts reversed%}
-    <ul>
-      <li>Место: {{ post.location }}</li>
-      <li>Дата: {{ post.date }}</li>
-      <li>Категория: <a class="mt-3 regular-link" href="{% url 'blog:category_posts' post.category %}"> {{ post.category }} </a></li>
-    </ul>
-      <p>{{ post.text|truncatewords:10 }}</p>
+{% for post in posts%}
+  {% include "includes/post.html" %}
     <p><a class="mt-3 regular-link" href="{% url 'blog:post_detail' post.id %}">Читать полный текст </a></p>
-{% if not forloop.last %}
+  {% if not forloop.last %}
     <hr>
-    {% endif %}
-   {% endfor %}
-  {% endblock %}
+  {% endif %}
+{% endfor %}
+{% endblock %}
