--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -1,10 +1,7 @@
 <style>
-  .this_style {
-  margin-left: 120px;
-  margin-top: 120px
-  }
-  .text {
-  margin-right: 990px;
+  .detail {
+           margin-left: 120px;
+           margin-top: 120px
   }
 </style>
 
@@ -15,5 +12,7 @@
   </title>
 </head>
 {% block content %}
+<div class="detail">
 {% include "includes/post.html" %}
+</div>
 {% endblock %}
