--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -1,15 +1,14 @@
 <style>
-  ul {
-  margin-left: 120px;
+  h1 {
+      margin-left: 120px;
+      padding-top: 100px;
+  }
+  .post {
+         margin-left: 120px;
   }
   p {
-  margin-left: 120px;
-  }
-  h1 {
-  margin-left: 120px;
-  padding-top: 100px;
-  a {
-  margin-right: 120px;
+     margin-left: 120px;
+     padding-top: 10px;
   }
 </style>
 
@@ -22,11 +21,13 @@
 {% block content %}
 <h1>Лента записей</h1>
 <hr>
-{% for post in posts%}
-  {% include "includes/post.html" %}
+<div class="post">
+{% for post in posts %}
+  {% include "includes/post.html" %}</div>
     <p><a class="mt-3 regular-link" href="{% url 'blog:post_detail' post.id %}">Читать полный текст </a></p>
-  {% if not forloop.last %}
-    <hr>
+<div class="post">{% if not forloop.last %}
+  <hr>
   {% endif %}
 {% endfor %}
+</div>
 {% endblock %}
