--- a/blogicum/templates/includes/post.html
+++ b/blogicum/templates/includes/post.html
@@ -1,8 +1,13 @@
-<div class="this_style">
 <ul>
-    <li>Место: {{ post.location }}</li>
-    <li>Дата: {{ post.date }}</li>
-    <li>Категория: <a class="mt-3 regular-link" href="{% url 'blog:category_posts' post.category %}"> {{ post.category }} </a></li>
-    </ul>
-    <div class="text">{{ post.text|linebreaksbr }}</div>
-</div>
+  <li>Место: {{ post.location }}</li>
+  <li>Дата: {{ post.date }}</li>
+  <li>Категория: <a class="mt-3 regular-link" href="{% url 'blog:category_posts' post.category %}"> {{ post.category }} </a></li>
+</ul>
+{% if trimmed is True %}
+<div>{{  post.text|truncatewords:10  }}</div>
+{% else %}
+<div>{{  post.text|linebreaksbr  }}</div>
+{% endif %}
+
+
+
