--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -1,33 +1,26 @@
-<style>
-  h1 {
-      margin-left: 120px;
-      padding-top: 100px;
-  }
-  .post {
-         margin-left: 120px;
-  }
-  p {
-     margin-left: 120px;
-     padding-top: 10px;
-  }
-</style>
-
+<!DOCTYPE html>
 {% extends 'base.html' %}
-<head>
-  <title>
-    {% block title %}Лента записей{% endblock %}
-  </title>
-</head>
 {% block content %}
-<h1>Лента записей</h1>
-<hr>
-<div class="post">
-{% for post in posts %}
-  {% include "includes/post.html" %}</div>
-    <p><a class="mt-3 regular-link" href="{% url 'blog:post_detail' post.id %}">Читать полный текст </a></p>
-<div class="post">{% if not forloop.last %}
-  <hr>
-  {% endif %}
-{% endfor %}
-</div>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="/static/img/fav/favicon.ico" type="image">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/img/fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/img/fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/img/fav/favicon-16x16.png">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <title>Лента записей</title>
+  </head>
+  <main>
+    <div class="container py-5">
+      <h1>Лента записей</h1>
+        {% for post in posts %}
+        {% include "includes/post.html" %}
+          <p><a class="mt-3 regular-link" href="{% url 'blog:post_detail' post.id %}">Читать полный текст </a></p>
+        {% if not forloop.last %}
+          <hr>
+        {% endif %}
+        {% endfor %}
+    </div>
 {% endblock %}
