--- a/blogicum/templates/pages/about.html
+++ b/blogicum/templates/pages/about.html
@@ -1,18 +1,19 @@
-<style>
-#about {
-        margin-top: 50px;
-}
-</style>
-
+<!DOCTYPE html>
 {% extends 'base.html' %}
-<head>
-  <title>
-    {% block title %}О проекте{% endblock %}
-  </title>
-</head>
 {% block content %}
-<main>
-  <div id="about">
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="/static/img/fav/favicon.ico" type="image">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/img/fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/img/fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/img/fav/favicon-16x16.png">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <title>О проекте</title>
+  </head>
+  <body>
+    <main>
       <div class="container py-5">
         <h1>О проекте</h1>
         <p>
@@ -30,6 +31,7 @@
           основные черты наших пользователей.
         </p>
       </div>
-    </div>
-  </main>
+    </main>
+  </body>
+</html>
 {% endblock %}
