--- a/blogicum/templates/pages/rules.html
+++ b/blogicum/templates/pages/rules.html
@@ -1,20 +1,20 @@
-<style>
-#rules {
-        margin-top: 50px;
-}
-</style>
-
+<!DOCTYPE html>
 {% extends 'base.html' %}
-<head>
-  <title>
-    {% block title %}Наши правила{% endblock %}
-  </title>
-</head>
 {% block content %}
-<main>
-  <div id="rules">
-    <div class="container py-5">
-      <h1>Наши правила</h1>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="/static/img/fav/favicon.ico" type="image">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/img/fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/img/fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/img/fav/favicon-16x16.png">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <title>Наши правила</title>
+  </head>
+ <main>
+      <div class="container py-5">
+        <h1>Наши правила</h1>
         <p>
           <b>Cамовыражение.</b> У наших пользователей должна
           быть возможность создать что-то своё, выразить себя,
@@ -38,7 +38,6 @@
           определяете вы и только вы.
         </p>
       </div>
-    </div>
-  </main>
+    </main>
 {% endblock %}
 
