--- a/blogicum/templates/blog/category.html
+++ b/blogicum/templates/blog/category.html
@@ -1,20 +1,9 @@
-<!DOCTYPE html>
 {% extends 'base.html' %}
+{% block title %}Публикации в категории - {{ category_slug }}{% endblock %}
 {% block content %}
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="/static/img/fav/favicon.ico" type="image">
-    <link rel="apple-touch-icon" sizes="180x180" href="/static/img/fav/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/static/img/fav/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/static/img/fav/favicon-16x16.png">
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-    <title>Публикации в категории - {{ category_slug }}</title>
-  </head>
-  <main>
-    <div class="container py-5">
-      <h1>Публикации в категории - {{ category_slug }}</h1>
-    </div>
-  </main>
+<main>
+  <div class="container py-5">
+    <h1>Публикации в категории - {{ category_slug }}</h1>
+  </div>
+</main>
 {% endblock %}
