--- a/blogicum/templates/includes/footer.html
+++ b/blogicum/templates/includes/footer.html
@@ -1,10 +1,3 @@
-<style>
-  footer {
-  margin-top: 60px;
-  }
-</style>
-
-<footer>
-  <hr>
-  <p align="center">© Блогикум</p>
+<footer class="border-top text-center py-3">
+  <p>© Блогикум</p>
 </footer>
