--- a/blogicum/templates/includes/post.html
+++ b/blogicum/templates/includes/post.html
@@ -1,3 +1,4 @@
+{% with request.resolver_match.view_name as view_name %}
 <ul>
   <li>Место: {{ post.location }}
   </li>
@@ -6,9 +7,10 @@
   <li>Категория: <a class="mt-3 regular-link" href="{% url 'blog:category_posts' post.category %}"> {{ post.category }} </a>
   </li>
 </ul>
-{% if trimmed is True %}
-  <div>{{  post.text|truncatewords:10  }}</div>
-{% else %}
-  <div>{{  post.text|linebreaksbr  }}</div>
+{% if view_name == 'blog:index' %}
+  {{ post.text|truncatewords:10 }}
+{% elif view_name  == 'blog:post_detail' %}
+  {{ post.text|linebreaksbr }}
 {% endif %}
+{% endwith %}
 
