--- a/blogicum/templates/includes/post.html
+++ b/blogicum/templates/includes/post.html
@@ -1,16 +1,15 @@
 {% with request.resolver_match.view_name as view_name %}
-<ul>
-  <li>Место: {{ post.location }}
-  </li>
-  <li>Дата: {{ post.date }}
-  </li>
-  <li>Категория: <a class="mt-3 regular-link" href="{% url 'blog:category_posts' post.category %}"> {{ post.category }} </a>
-  </li>
-</ul>
-{% if view_name == 'blog:index' %}
-  {{ post.text|truncatewords:10 }}
-{% elif view_name  == 'blog:post_detail' %}
-  {{ post.text|linebreaksbr }}
-{% endif %}
+  <ul>
+    <li>Место: {{ post.location }}</li>
+    <li>Дата: {{ post.date }}</li>
+    <li>Категория: <a class="mt-3 regular-link" href="{% url 'blog:category_posts' post.category %}"> {{ post.category }} </a></li>
+  </ul>
+  {% if view_name == 'blog:index' %}
+    {{ post.text|truncatewords:10 }}
+    <p><a class="mt-3 regular-link" href="{% url 'blog:post_detail' post.id %}">Читать полный текст </a></p>
+  {% elif view_name  == 'blog:post_detail' %}
+    {{ post.text|linebreaksbr }}
+  {% endif %}
 {% endwith %}
+
 
